# crop_row_detection

./: .gitignore  CMakeLists.txt
crop_row_detection_cpp/: CMakeLists.txt  package.xml
crop_row_detection_cpp/apps/: test_image.cpp  test_video.cpp
crop_row_detection_cpp/include/: CropRowDetector.h  ImagePreprocessor.h  crop_row_detection.h
crop_row_detection_cpp/pythons/: fit_poly.py  score.py
crop_row_detection_cpp/src/: CropRowDetector.cpp  ImagePreprocessor.cpp  PolyFit.cpp  PolyFit.h  PolyUtil.cpp  crop_row_detection_main.cpp
crop_row_detection_original/: CMakeLists.txt  package.xml
crop_row_detection_original/cfg/: params.cfg
crop_row_detection_original/include/: Platform.h  RVL2DPose.h  RVL3DObject.h  RVLAImage.h  RVLArray.h  RVLBuffer.h  RVLC2D.h  RVLCamera.h  RVLClass.h  RVLConst.h  RVLCore.h  RVLCropRowDetector.h  RVLCropRowDetectorGT.h  RVLDisplayVector.h  RVLEDT.h  RVLFigure.h  RVLGUI.h  RVLMChain.h  RVLMem.h  RVLObject2.h  RVLParameterList.h  RVLQListArray.h  RVLStereoVision.h  RVLUtil.h  RVLVisionSystem.h  RVLWChain.h
crop_row_detection_original/src/: RVLAImage.cpp  RVLBuffer.cpp  RVLC2D.cpp  RVLCamera.cpp  RVLClass.cpp  RVLCore.cpp  RVLCropRowDetector.cpp  RVLCropRowDetectorGT.cpp  RVLDisplayVector.cpp  RVLEDT.cpp  RVLFigure.cpp  RVLGUI.cpp  RVLMChain.cpp  RVLMem.cpp  RVLObject2.cpp  RVLParameterList.cpp  RVLQListArray.cpp  RVLStereoVision.cpp  RVLUtil.cpp  RVLVisionSystem.cpp  RVLWChain.cpp  Stdafx.cpp  crop_row_detection_node.cpp
crop_row_detector_cpp/: CMakeLists.txt
crop_row_detector_cpp/config/: params.cfg
crop_row_detector_cpp/src/: CropRowDetector.cpp  CropRowDetector.h  ImagePreprocessor.cpp  ImagePreprocessor.h  RVLCropRowDetector.cpp  crop_row_detection.cpp  crop_row_detection_main.cpp  hello_world.bak  hello_world.cpp  hello_world.h
